feat: implement ingestion and clustering pipelines (BAT-5)

--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -14,6 +14,7 @@
     "migrate:make": "tsx scripts/migrate-make.ts"
   },
   "dependencies": {
+    "@battlescope/shared": "workspace:*",
     "dotenv": "^16.4.5",
     "kysely": "^0.27.2",
     "pg": "^8.11.5",
