--- a/backend/ingest/package.json
+++ b/backend/ingest/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "@battlescope/database": "workspace:*",
     "@battlescope/shared": "workspace:*",
-    "pino": "^8.17.0"
+    "@opentelemetry/api": "^1.9.0",
+    "fastify": "^4.26.2",
+    "pino": "^8.17.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "tsx": "^4.7.0"
