--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -16,8 +16,10 @@
   "dependencies": {
     "@battlescope/database": "workspace:*",
     "@battlescope/shared": "workspace:*",
+    "@opentelemetry/api": "^1.9.0",
     "fastify": "^4.26.2",
-    "pino": "^8.17.0"
+    "pino": "^8.17.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^4.0.0",
