--- a/backend/enrichment/package.json
+++ b/backend/enrichment/package.json
@@ -14,11 +14,17 @@
     "dev": "tsx watch src/index.ts"
   },
   "dependencies": {
+    "@battlescope/database": "workspace:*",
     "@battlescope/shared": "workspace:*",
+    "@opentelemetry/api": "^1.9.0",
+    "fastify": "^4.26.2",
     "bullmq": "^4.13.1",
-    "pino": "^8.17.0"
+    "ioredis": "^5.4.1",
+    "pino": "^8.17.0",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
+    "ioredis-mock": "^5.8.0",
     "tsx": "^4.7.0"
   }
 }
