--- a/backend/ingest/package.json
+++ b/backend/ingest/package.json
@@ -17,6 +17,8 @@
     "@battlescope/database": "workspace:*",
     "@battlescope/shared": "workspace:*",
     "@opentelemetry/api": "^1.9.0",
+    "bullmq": "^4.13.1",
+    "ioredis": "^5.4.1",
     "fastify": "^4.26.2",
     "pino": "^8.17.0",
     "zod": "^3.22.4"
