--- a/infra/k8s/configmap.yaml
+++ b/infra/k8s/configmap.yaml
@@ -4,12 +4,12 @@ metadata:
   name: battlescope-config
   namespace: battlescope
 data:
-  CLUSTER_WINDOW_MINUTES: "30"
-  CLUSTER_GAP_MAX_MINUTES: "15"
-  CLUSTER_MIN_KILLS: "2"
-  CLUSTER_BATCH_SIZE: "500"
-  CLUSTER_INTERVAL_MS: "10000"
-  INGEST_POLL_INTERVAL_MS: "5000"
-  ENRICHMENT_CONCURRENCY: "5"
-  ENRICHMENT_THROTTLE_MS: "0"
-  LOG_LEVEL: "info"
+  CLUSTER_WINDOW_MINUTES: '30'
+  CLUSTER_GAP_MAX_MINUTES: '15'
+  CLUSTER_MIN_KILLS: '2'
+  CLUSTER_BATCH_SIZE: '500'
+  CLUSTER_INTERVAL_MS: '10000'
+  INGEST_POLL_INTERVAL_MS: '5000'
+  ENRICHMENT_CONCURRENCY: '5'
+  ENRICHMENT_THROTTLE_MS: '0'
+  LOG_LEVEL: 'info'
