--- a/infra/k8s/ingest-deployment.yaml
+++ b/infra/k8s/ingest-deployment.yaml
@@ -22,7 +22,7 @@ spec:
               containerPort: 3002
           env:
             - name: PORT
-              value: "3002"
+              value: '3002'
           envFrom:
             - secretRef:
                 name: battlescope-secrets
