--- a/infra/k8s/scheduler-cronjob.yaml
+++ b/infra/k8s/scheduler-cronjob.yaml
@@ -4,7 +4,7 @@ metadata:
   name: scheduler
   namespace: battlescope
 spec:
-  schedule: "*/10 * * * *"
+  schedule: '*/10 * * * *'
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 3
   jobTemplate:
