--- a/packages/database/package.json
+++ b/packages/database/package.json
@@ -21,6 +21,7 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@types/pg": "^8.15.6",
     "pg-mem": "^3.0.5",
     "tsx": "^4.7.0"
   }
