--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     working_dir: /workspace
     command: >
       bash -lc "corepack enable pnpm &&
-      pnpm --filter @battlescope/api dev"
+      pnpm --filter @battlescope/api dev --host 0.0.0.0"
     environment:
       NODE_ENV: development
       DATABASE_URL: postgres://battlescope:battlescope@postgres:5432/battlescope
@@ -191,7 +191,7 @@ services:
       pnpm --filter @battlescope/frontend dev --host 0.0.0.0 --port 3001"
     environment:
       NODE_ENV: development
-      VITE_API_BASE_URL: http://api:3000
+      VITE_API_BASE_URL: http://localhost:3000
     volumes:
       - .:/workspace
       - node_modules:/workspace/node_modules
