--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
     "@testing-library/react": "^14.2.1",
+    "@testing-library/user-event": "^14.5.1",
     "@testing-library/jest-dom": "^6.4.2",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
