--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -15,10 +15,12 @@
   },
   "dependencies": {
     "@battlescope/database": "workspace:*",
+    "@battlescope/esi-client": "workspace:*",
     "@battlescope/shared": "workspace:*",
     "@fastify/cors": "^9.0.0",
     "@opentelemetry/api": "^1.9.0",
     "fastify": "^4.26.2",
+    "ioredis": "^5.3.2",
     "pino": "^8.17.0",
     "zod": "^3.22.4"
   },
