--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -11,21 +11,27 @@
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
     "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts"
+    "dev": "tsx watch src/index.ts",
+    "generate-openapi": "tsx src/generate-openapi.ts"
   },
   "dependencies": {
     "@battlescope/database": "workspace:*",
     "@battlescope/esi-client": "workspace:*",
     "@battlescope/shared": "workspace:*",
     "@fastify/cors": "^9.0.0",
+    "@fastify/swagger": "^9.5.2",
+    "@fastify/swagger-ui": "^5.2.3",
     "@opentelemetry/api": "^1.9.0",
     "fastify": "^4.26.2",
+    "fastify-type-provider-zod": "^6.1.0",
     "ioredis": "^5.3.2",
     "pino": "^8.17.0",
+    "yaml": "^2.8.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@fastify/type-provider-typebox": "^4.0.0",
+    "@types/node": "^20.11.30",
     "tsx": "^4.7.0"
   }
 }
