--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,3 +26,54 @@ jobs:
 
       - name: Run CI targets
         run: make ci
+
+  publish-images:
+    runs-on: ubuntu-latest
+    needs: build
+    if: github.ref == 'refs/heads/main'
+    strategy:
+      matrix:
+        include:
+          - name: api
+            service_scope: "@battlescope/api"
+            build_target: "backend/api"
+            expose_port: "3000"
+          - name: ingest
+            service_scope: "@battlescope/ingest"
+            build_target: "backend/ingest"
+            expose_port: "3002"
+          - name: clusterer
+            service_scope: "@battlescope/clusterer"
+            build_target: "backend/clusterer"
+            expose_port: "3003"
+          - name: scheduler
+            service_scope: "@battlescope/scheduler"
+            build_target: "backend/scheduler"
+            expose_port: "3004"
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push ${{ matrix.name }} image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          build-args: |
+            SERVICE_SCOPE=${{ matrix.service_scope }}
+            BUILD_TARGET=${{ matrix.build_target }}
+            EXPOSE_PORT=${{ matrix.expose_port }}
+          tags: |
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/battlescope-${{ matrix.name }}:${{ github.sha }}
+            docker.io/${{ secrets.DOCKERHUB_USERNAME }}/battlescope-${{ matrix.name }}:latest
