--- a/backend/ingest/package.json
+++ b/backend/ingest/package.json
@@ -21,6 +21,7 @@
     "ioredis": "^5.4.1",
     "fastify": "^4.26.2",
     "pino": "^8.17.0",
+    "kysely": "^0.27.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
