--- a/backend/enrichment/package.json
+++ b/backend/enrichment/package.json
@@ -21,6 +21,7 @@
     "bullmq": "^4.13.1",
     "ioredis": "^5.4.1",
     "pino": "^8.17.0",
+    "kysely": "^0.27.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
