--- a/k8s/services.yaml
+++ b/k8s/services.yaml
@@ -6,13 +6,13 @@ metadata:
   labels:
     app: api
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: api
   ports:
     - name: http
       protocol: TCP
-      port: 80
+      port: 3001
       targetPort: 3000
 ---
 apiVersion: v1
@@ -23,13 +23,13 @@ metadata:
   labels:
     app: frontend
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: frontend
   ports:
     - name: http
       protocol: TCP
-      port: 80
+      port: 3000
       targetPort: 4173
 ---
 apiVersion: v1
