--- a/infra/k8s/api-deployment.yaml
+++ b/infra/k8s/api-deployment.yaml
@@ -15,7 +15,7 @@ spec:
     spec:
       containers:
         - name: api
-          image: ghcr.io/your-org/battlescope-api:latest
+          image: docker.io/petdog/battlescope-api:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
@@ -56,9 +56,10 @@ metadata:
   name: api
   namespace: battlescope
 spec:
+  type: NodePort
   selector:
     app: api
   ports:
     - name: http
-      port: 80
+      port: 3000
       targetPort: http
