--- a/infra/k8s/frontend-deployment.yaml
+++ b/infra/k8s/frontend-deployment.yaml
@@ -1,48 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: clusterer
+  name: frontend
   namespace: battlescope
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
-      app: clusterer
+      app: frontend
   template:
     metadata:
       labels:
-        app: clusterer
+        app: frontend
     spec:
       containers:
-        - name: clusterer
-          image: docker.io/petdog/battlescope-clusterer:latest
+        - name: frontend
+          image: docker.io/petdog/battlescope-frontend:latest
           imagePullPolicy: IfNotPresent
           ports:
             - name: http
-              containerPort: 3003
+              containerPort: 4173
           env:
-            - name: PORT
-              value: '3003'
-          envFrom:
-            - secretRef:
-                name: battlescope-secrets
-            - configMapRef:
-                name: battlescope-config
+            - name: VITE_API_URL
+              value: http://api.battlescope.svc.cluster.local:3000
           readinessProbe:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 5
+            initialDelaySeconds: 10
             periodSeconds: 10
           livenessProbe:
             httpGet:
               path: /healthz
               port: http
-            initialDelaySeconds: 10
-            periodSeconds: 20
+            initialDelaySeconds: 30
+            periodSeconds: 30
           resources:
             requests:
-              cpu: 50m
+              cpu: 125m
               memory: 128Mi
             limits:
               cpu: 250m
@@ -51,12 +46,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: clusterer
+  name: frontend
   namespace: battlescope
 spec:
+  type: NodePort
   selector:
-    app: clusterer
+    app: frontend
   ports:
     - name: http
-      port: 3003
+      port: 3001
       targetPort: http
