--- a/backend/api/package.json
+++ b/backend/api/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/backend/api/src/index.js",
+  "types": "dist/backend/api/src/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "test": "vitest run",
     "typecheck": "tsc --noEmit",
-    "start": "node dist/index.js",
+    "start": "node dist/backend/api/src/index.js",
     "dev": "tsx watch src/index.ts",
     "generate-openapi": "tsx src/generate-openapi.ts"
   },
