--- a/infra/k8s/enrichment-deployment.yaml
+++ b/infra/k8s/enrichment-deployment.yaml
@@ -16,7 +16,7 @@ spec:
       containers:
         - name: enrichment
           image: docker.io/petdog/battlescope-enrichment:latest
-          imagePullPolicy: IfNotPresent
+          imagePullPolicy: Always
           ports:
             - name: http
               containerPort: 3004
