chore: updated implementation

--- a/infra/k8s/clusterer-deployment.yaml
+++ b/infra/k8s/clusterer-deployment.yaml
@@ -17,6 +17,9 @@ spec:
         - name: clusterer
           image: docker.io/petdog/battlescope-clusterer:latest
           imagePullPolicy: Always
+          command:
+            - node
+            - dist/backend/clusterer/src/index.js
           ports:
             - name: http
               containerPort: 3003
