chore: updated implementation

--- a/infra/k8s/secrets.example.yaml
+++ b/infra/k8s/secrets.example.yaml
@@ -5,8 +5,9 @@ metadata:
   namespace: battlescope
 type: Opaque
 stringData:
-  DATABASE_URL: postgres://postgres:postgres@postgres:5432/battlescope
-  REDIS_URL: redis://redis:6379/0
+  DATABASE_URL: postgres://battlescope:aA1w0Kpc9Rz2@postgres:5432/battlescope
+  REDIS_URL: redis://:tN4b7Qs1Lp9d@redis:6379/0
+  ESI_REDIS_CACHE_URL: redis://:tN4b7Qs1Lp9d@redis:6379/1
   ZKILLBOARD_REDISQ_URL: https://zkillredisq.stream/listen.php
   ZKILLBOARD_REDISQ_ID: battlescope
   ZKILL_USER_AGENT: BattleScope/1.0 (+https://battlescope.app)
