--- a/infra/k8s/postgres-statefulset.yaml
+++ b/infra/k8s/postgres-statefulset.yaml
@@ -74,7 +74,7 @@ spec:
     - metadata:
         name: postgres-data
       spec:
-        accessModes: ["ReadWriteOnce"]
+        accessModes: ['ReadWriteOnce']
         resources:
           requests:
             storage: 20Gi
