--- a/infra/k8s/enrichment-deployment.yaml
+++ b/infra/k8s/enrichment-deployment.yaml
@@ -47,11 +47,11 @@ spec:
             periodSeconds: 20
           resources:
             requests:
-              cpu: 1
-              memory: 1Gi
+              cpu: 50m
+              memory: 128Mi
             limits:
-              cpu: 1
-              memory: 1Gi
+              cpu: 250m
+              memory: 256Mi
 ---
 apiVersion: v1
 kind: Service
