chore: updated static file generation

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -23,7 +23,11 @@ RUN pnpm --filter @battlescope/frontend... build
 FROM nginx:1.25-alpine AS runner
 
 COPY --from=builder /workspace/frontend/dist /usr/share/nginx/html
+COPY frontend/docker-entrypoint.sh /docker-entrypoint.sh
+
+RUN chmod +x /docker-entrypoint.sh
 
 EXPOSE 80
 
+ENTRYPOINT ["/docker-entrypoint.sh"]
 CMD ["nginx", "-g", "daemon off;"]
