--- a/infra/k8s/configmap.yaml
+++ b/infra/k8s/configmap.yaml
@@ -17,3 +17,6 @@ data:
   HOST: 0.0.0.0
   # Frontend configuration - API endpoint for the browser
   VITE_API_BASE_URL: http://10.0.1.5:32298
+  # OpenTelemetry configuration
+  OTEL_EXPORTER_OTLP_ENDPOINT: http://otel-collector:4318
+  OTEL_METRIC_EXPORT_INTERVAL: '15000'
