--- a/infra/k8s/prometheus-deployment.yaml
+++ b/infra/k8s/prometheus-deployment.yaml
@@ -25,6 +25,7 @@ spec:
             - '--storage.tsdb.retention.time=15d'
             - '--web.console.libraries=/usr/share/prometheus/console_libraries'
             - '--web.console.templates=/usr/share/prometheus/consoles'
+            - '--web.enable-remote-write-receiver'
           ports:
             - name: web
               containerPort: 9090
