--- a/infra/k8s/otel-collector-config.yaml
+++ b/infra/k8s/otel-collector-config.yaml
@@ -5,6 +5,10 @@ metadata:
   namespace: battlescope
 data:
   collector.yaml: |
+    extensions:
+      health_check:
+        endpoint: 0.0.0.0:13133
+
     receivers:
       otlp:
         protocols:
@@ -42,6 +46,8 @@ data:
         loglevel: info
 
     service:
+      extensions: [health_check]
+
       pipelines:
         traces:
           receivers: [otlp]
