chore: changes to clusterer algorithm

--- a/infra/k8s/configmap.yaml
+++ b/infra/k8s/configmap.yaml
@@ -7,6 +7,7 @@ data:
   CLUSTER_WINDOW_MINUTES: '30'
   CLUSTER_GAP_MAX_MINUTES: '15'
   CLUSTER_MIN_KILLS: '2'
+  CLUSTER_PROCESSING_DELAY_MINUTES: '30'
   CLUSTER_BATCH_SIZE: '500'
   CLUSTER_INTERVAL_MS: '10000'
   INGEST_POLL_INTERVAL_MS: '5000'
