--- a/packages/battle-intel/package.json
+++ b/packages/battle-intel/package.json
@@ -1,29 +1,22 @@
 {
-  "name": "@battlescope/clusterer",
+  "name": "@battlescope/battle-intel",
   "version": "0.1.0",
   "private": true,
   "type": "module",
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/battle-intel/src/index.js",
+  "types": "dist/battle-intel/src/index.d.ts",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "lint": "eslint \"src/**/*.{ts,tsx}\"",
     "test": "vitest run",
-    "typecheck": "tsc --noEmit",
-    "start": "node dist/index.js",
-    "dev": "tsx watch src/index.ts"
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
-    "@battlescope/battle-reports": "workspace:*",
     "@battlescope/database": "workspace:*",
     "@battlescope/shared": "workspace:*",
-    "@opentelemetry/api": "^1.9.0",
-    "fastify": "^4.26.2",
     "kysely": "^0.27.2",
     "pino": "^8.17.0",
     "zod": "^3.22.4"
   },
-  "devDependencies": {
-    "tsx": "^4.7.0"
-  }
+  "devDependencies": {}
 }
