--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -18,7 +18,9 @@
     "@opentelemetry/resources": "^1.9.0",
     "@opentelemetry/sdk-metrics": "^1.9.0",
     "@opentelemetry/sdk-node": "^0.51.1",
-    "@opentelemetry/semantic-conventions": "^1.9.0"
+    "@opentelemetry/semantic-conventions": "^1.9.0",
+    "ioredis": "^5.3.2",
+    "pino": "^8.17.0"
   },
   "devDependencies": {}
 }
