feat: add EVE OAuth configuration to Kubernetes secrets example

--- a/infra/k8s/secrets.example.yaml
+++ b/infra/k8s/secrets.example.yaml
@@ -8,6 +8,15 @@ stringData:
   DATABASE_URL: postgres://battlescope:aA1w0Kpc9Rz2@postgres:5432/battlescope
   REDIS_URL: redis://:tN4b7Qs1Lp9d@redis:6379/0
   ESI_REDIS_CACHE_URL: redis://:tN4b7Qs1Lp9d@redis:6379/1
+  SESSION_REDIS_URL: redis://:tN4b7Qs1Lp9d@redis:6379/2
   ZKILLBOARD_REDISQ_URL: https://zkillredisq.stream/listen.php
   ZKILLBOARD_REDISQ_ID: battlescope
   ZKILL_USER_AGENT: BattleScope/1.0 (+https://battlescope.app)
+  # EVE Online OAuth Configuration
+  # Get your credentials from https://developers.eveonline.com/
+  EVE_CLIENT_ID: your-client-id-here
+  EVE_CLIENT_SECRET: your-client-secret-here
+  EVE_CALLBACK_URL: http://your-domain:30000/auth/callback
+  # Generate with: openssl rand -base64 32
+  ENCRYPTION_KEY: your-encryption-key-here
+  FRONTEND_URL: http://your-domain:30001
