chore: increased security and compliance

--- a/infra/k8s/configmap.yaml
+++ b/infra/k8s/configmap.yaml
@@ -16,6 +16,8 @@ data:
   LOG_LEVEL: 'info'
   POSTGRES_PORT: '5432'
   HOST: 0.0.0.0
+  # Session cookie security - disable for k8s without SSL, enable for production with HTTPS
+  SESSION_COOKIE_SECURE: 'false'
   # Frontend configuration - API endpoint for the browser
   VITE_API_BASE_URL: http://10.0.1.5:30000
   # OpenTelemetry configuration
