--- a/infra/k8s/verifier/configmap.yaml
+++ b/infra/k8s/verifier/configmap.yaml
@@ -5,10 +5,10 @@ metadata:
   namespace: battlescope
 data:
   # Verification settings
-  BATCH_SIZE: "50"
-  DELAY_BETWEEN_BATCHES: "1000"
-  MAX_CHARACTERS_PER_RUN: "1000"
-  VERIFICATION_THRESHOLD_MINUTES: "55"
+  BATCH_SIZE: '50'
+  DELAY_BETWEEN_BATCHES: '1000'
+  MAX_CHARACTERS_PER_RUN: '1000'
+  VERIFICATION_THRESHOLD_MINUTES: '55'
 
   # Environment
-  NODE_ENV: "production"
+  NODE_ENV: 'production'
