--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@opentelemetry/api": "^1.9.0",
+    "@opentelemetry/auto-instrumentations-node": "^0.67.0",
     "@opentelemetry/exporter-metrics-otlp-http": "^0.51.1",
     "@opentelemetry/exporter-trace-otlp-http": "^0.51.1",
     "@opentelemetry/resources": "^1.9.0",
@@ -21,6 +22,5 @@
     "@opentelemetry/semantic-conventions": "^1.9.0",
     "ioredis": "^5.3.2",
     "pino": "^8.17.0"
-  },
-  "devDependencies": {}
+  }
 }
